--- a/src/views/cadastroCategoria.fxml
+++ b/src/views/cadastroCategoria.fxml
@@ -1,10 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ButtonBar?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" fx:id="aPane" prefHeight="571.0" prefWidth="461.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.CadastroCategoriaController">
+<AnchorPane id="AnchorPane" fx:id="aPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.CadastroCategoriaController">
    <children>
-      <Button fx:id="btnCancela" layoutX="45.0" layoutY="493.0" mnemonicParsing="false" onAction="#handleButtonCancel" text="Cancelar" />
+      <Button fx:id="btnCancela" layoutX="509.0" layoutY="361.0" mnemonicParsing="false" onAction="#handleButtonCancel" prefWidth="75.0" text="Sair" />
+      <TableView fx:id="tableViewCategorias" layoutX="61.0" layoutY="86.0" prefHeight="243.0" prefWidth="479.0">
+        <columns>
+          <TableColumn fx:id="idCategoria" prefWidth="34.0" text="Id" />
+          <TableColumn fx:id="descricaoCategoria" prefWidth="349.0" text="Descrição" />
+            <TableColumn fx:id="tipoCategoria" prefWidth="94.0" text="Tipo" />
+        </columns>
+      </TableView>
+      <Label layoutX="177.0" layoutY="22.0" text="Cadastro de Categorias">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </Label>
+      <ButtonBar layoutX="151.0" layoutY="336.0" prefWidth="247.0">
+         <buttons>
+            <Button fx:id="buttonIncluir" mnemonicParsing="false" onAction="#handleButtonIncluir" text="Incluir" />
+            <Button fx:id="buttonEditar" mnemonicParsing="false" onAction="#handleButtonEditar" text="Editar" />
+            <Button fx:id="buttonExcluir" mnemonicParsing="false" onAction="#handleButtonExcluir" text="Excluir" />
+         </buttons>
+      </ButtonBar>
    </children>
 </AnchorPane>
