--- a/src/views/cadastroMaterial.fxml
+++ b/src/views/cadastroMaterial.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TextField?>
@@ -26,8 +27,8 @@
       <TextField fx:id="txtQuantidade" layoutX="370.0" layoutY="125.0" prefHeight="25.0" prefWidth="62.0" promptText="20" />
       <TextField fx:id="txtRendimento" layoutX="215.0" layoutY="167.0" prefHeight="25.0" prefWidth="62.0" promptText="5" />
       <TextField fx:id="txtUnidade" layoutX="370.0" layoutY="167.0" prefHeight="25.0" prefWidth="62.0" promptText="kg" />
-      <TextField layoutX="213.0" layoutY="232.0" prefHeight="25.0" prefWidth="217.0" />
       <Separator layoutY="47.0" prefHeight="17.0" prefWidth="600.0" />
       <Button fx:id="btnCadastrar" layoutX="368.0" layoutY="290.0" mnemonicParsing="false" onAction="#handleButtonCadastrar" text="Cadastrar" />
+      <ComboBox fx:id="comboCategoria" layoutX="215.0" layoutY="232.0" prefHeight="25.0" prefWidth="217.0" />
    </children>
 </AnchorPane>
