--- a/src/views/estimativa.fxml
+++ b/src/views/estimativa.fxml
@@ -7,22 +7,22 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" fx:id="aPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.MaterialController">
+<AnchorPane id="AnchorPane" fx:id="aPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.EstimativaController">
    <children>
       <Label layoutX="242.0" layoutY="29.0" text="Estimativas">
          <font>
             <Font size="24.0" />
          </font>
       </Label>
-      <TableView fx:id="tableViewEstimativa" layoutX="32.0" layoutY="78.0" prefHeight="215.0" prefWidth="530.0">
+      <TableView fx:id="tableViewEstimativa" layoutX="36.0" layoutY="78.0" prefHeight="215.0" prefWidth="530.0">
         <columns>
           <TableColumn fx:id="cData" prefWidth="113.0" text="Data" />
           <TableColumn fx:id="cNome" prefWidth="416.0" text="Nome" />
         </columns>
       </TableView>
-      <Button fx:id="btnInsere" layoutX="151.0" layoutY="340.0" mnemonicParsing="false" onAction="#handleButtonCadastroMaterial" prefHeight="25.0" prefWidth="67.0" text="Incluir" />
-      <Button fx:id="btnDeleta" layoutX="241.0" layoutY="340.0" mnemonicParsing="false" onAction="#handleButtonDeletar" prefHeight="25.0" prefWidth="67.0" text="Excluir" />
-      <Button fx:id="btnSair" layoutX="507.0" layoutY="352.0" mnemonicParsing="false" onAction="#handleButtonVoltar" prefHeight="25.0" prefWidth="67.0" text="Sair" />
+      <Button fx:id="btnInsere" layoutX="151.0" layoutY="340.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="67.0" text="Incluir" />
+      <Button fx:id="btnDeleta" layoutX="241.0" layoutY="340.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="67.0" text="Excluir" />
+      <Button fx:id="btnSair" layoutX="507.0" layoutY="352.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="67.0" text="Sair" />
       <Button fx:id="btnVerEstimativa" layoutX="333.0" layoutY="340.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="117.0" text="Ver Estimativa" />
    </children>
 </AnchorPane>
