--- a/src/views/menu.fxml
+++ b/src/views/menu.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" fx:id="aPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.MenuController">
+<AnchorPane id="AnchorPane" fx:id="aPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.MenuController">
    <children>
       <ImageView fitHeight="97.0" fitWidth="87.0" layoutX="173.0" layoutY="152.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -29,11 +29,10 @@
                   <MenuItem fx:id="menuCadastroCategoria" mnemonicParsing="false" onAction="#handleMenuCadastroCategoria" text="Categorias" />
             </items>
           </Menu>
-          <Menu fx:id="menuEstimativa" mnemonicParsing="false" text="Estimativa">
-            <items>
-              <MenuItem mnemonicParsing="false" text="Delete" />
-            </items>
-          </Menu>
+          <Menu mnemonicParsing="false" text="Estimativa">
+               <items>
+                  <MenuItem fx:id="menuEstimativa" mnemonicParsing="false" onAction="#handleMenuEstimativa" text="Ver Estimativas" />
+               </items></Menu>
         </menus>
       </MenuBar>
       <Label layoutX="234.0" layoutY="73.0" prefHeight="56.0" prefWidth="49.0" text="Olá,">
