--- a/src/views/estimativa.fxml
+++ b/src/views/estimativa.fxml
@@ -20,9 +20,9 @@
           <TableColumn fx:id="cNome" prefWidth="416.0" text="Nome" />
         </columns>
       </TableView>
-      <Button fx:id="btnInsere" layoutX="151.0" layoutY="340.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="67.0" text="Incluir" />
-      <Button fx:id="btnDeleta" layoutX="241.0" layoutY="340.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="67.0" text="Excluir" />
-      <Button fx:id="btnSair" layoutX="507.0" layoutY="352.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="67.0" text="Sair" />
-      <Button fx:id="btnVerEstimativa" layoutX="333.0" layoutY="340.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="117.0" text="Ver Estimativa" />
+      <Button fx:id="btnInsere" layoutX="151.0" layoutY="340.0" mnemonicParsing="false" onAction="#handleButtonInserirEstimativa" prefHeight="25.0" prefWidth="67.0" text="Incluir" />
+      <Button fx:id="btnDeleta" layoutX="241.0" layoutY="340.0" mnemonicParsing="false" onAction="#handleButtonDeletar" prefHeight="25.0" prefWidth="67.0" text="Excluir" />
+      <Button fx:id="btnSair" layoutX="507.0" layoutY="352.0" mnemonicParsing="false" onAction="#handleButtonVoltar" prefHeight="25.0" prefWidth="67.0" text="Sair" />
+      <Button fx:id="btnVisualizar" layoutX="333.0" layoutY="340.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="117.0" text="Visualizar" />
    </children>
 </AnchorPane>
