--- a/src/views/cadastroItemEstimativa.fxml
+++ b/src/views/cadastroItemEstimativa.fxml
@@ -11,7 +11,7 @@
 
 <AnchorPane id="AnchorPane" fx:id="aPane" prefHeight="400.0" prefWidth="599.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.CadastroItemEstimativaController">
    <children>
-      <Button fx:id="btnInsere" layoutX="200.0" layoutY="345.0" mnemonicParsing="false" onAction="#handleButtonCadastroMaterial" text="Inserir Item" />
+      <Button fx:id="btnInsere" layoutX="200.0" layoutY="345.0" mnemonicParsing="false" onAction="#handleButtonInserirItem" text="Inserir Item" />
       <Label layoutX="184.0" layoutY="14.0" prefHeight="35.0" prefWidth="265.0" text="Cadastro de Estimativa">
          <font>
             <Font size="24.0" />
