--- a/src/views/inserirItemEstimativa.fxml
+++ b/src/views/inserirItemEstimativa.fxml
@@ -10,7 +10,7 @@
 
 <AnchorPane id="AnchorPane" fx:id="aPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.InserirItemEstimativaController">
    <children>
-      <Button fx:id="btnCancela" layoutX="224.0" layoutY="305.0" mnemonicParsing="false" text="Cancelar" />
+      <Button fx:id="btnCancela" layoutX="224.0" layoutY="305.0" mnemonicParsing="false" onAction="#handleButtonVoltar" text="Cancelar" />
       <Label layoutX="184.0" layoutY="14.0" prefHeight="35.0" prefWidth="265.0" text="Inserir Itens Estimativa">
          <font>
             <Font size="24.0" />
@@ -20,7 +20,7 @@
       <Label layoutX="136.0" layoutY="124.0" text="Material" />
       <TextField fx:id="txtQuantidade" layoutX="212.0" layoutY="169.0" prefHeight="25.0" prefWidth="62.0" promptText="20" />
       <Separator layoutY="47.0" prefHeight="17.0" prefWidth="600.0" />
-      <Button fx:id="btnCadastrar" layoutX="326.0" layoutY="305.0" mnemonicParsing="false" text="Cadastrar" />
+      <Button fx:id="btnCadastrar" layoutX="326.0" layoutY="305.0" mnemonicParsing="false" onAction="#handleButtonCadastrar" text="Cadastrar" />
       <ComboBox fx:id="comboMaterial" layoutX="213.0" layoutY="119.0" prefHeight="25.0" prefWidth="217.0" />
    </children>
 </AnchorPane>
