--- a/src/views/cadastroItemEstimativa.fxml
+++ b/src/views/cadastroItemEstimativa.fxml
@@ -9,9 +9,9 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" fx:id="aPane" prefHeight="400.0" prefWidth="599.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.CadastroItemEstimativaController">
+<AnchorPane id="AnchorPane" fx:id="aPane" prefHeight="400.0" prefWidth="599.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.CadastroItemEstimativaController">
    <children>
-      <Button fx:id="btnInsere" layoutX="200.0" layoutY="345.0" mnemonicParsing="false" onAction="#handleButtonIncluir" text="Inserir Item" />
+      <Button fx:id="btnInsere" layoutX="227.0" layoutY="352.0" mnemonicParsing="false" onAction="#handleButtonIncluir" prefHeight="25.0" prefWidth="76.0" text="Inserir Item" />
       <Label layoutX="184.0" layoutY="14.0" prefHeight="35.0" prefWidth="265.0" text="Cadastro de Estimativa">
          <font>
             <Font size="24.0" />
@@ -21,9 +21,8 @@
       <Label layoutX="172.0" layoutY="129.0" text="Data" />
       <TextField fx:id="txtNome" layoutX="215.0" layoutY="75.0" prefHeight="25.0" prefWidth="217.0" promptText="Nome da Estimativa" />
       <Separator layoutY="47.0" prefHeight="17.0" prefWidth="600.0" />
-      <Button fx:id="btnDeleta" layoutX="305.0" layoutY="345.0" mnemonicParsing="false" onAction="#handleButtonExcluir" prefHeight="31.0" prefWidth="95.0" text="Excluir" />
+      <Button fx:id="btnDeleta" layoutX="318.0" layoutY="352.0" mnemonicParsing="false" onAction="#handleButtonExcluir" prefHeight="25.0" prefWidth="76.0" text="Excluir" />
       <TextField fx:id="txtData" layoutX="215.0" layoutY="124.0" prefHeight="25.0" prefWidth="217.0" promptText="Data da Estimativa" />
-      <Button fx:id="btnSair" layoutX="460.0" layoutY="345.0" mnemonicParsing="false" onAction="#handleButtonVoltar" text="Sair" />
       <TableView fx:id="tableViewCadastroItemEstimativa" layoutX="17.0" layoutY="173.0" prefHeight="158.0" prefWidth="565.0">
         <columns>
           <TableColumn fx:id="cId" prefWidth="45.0" text="Id" />
@@ -33,6 +32,6 @@
             <TableColumn fx:id="cVlrTotal" minWidth="0.0" prefWidth="124.0" text="Vlr Total" />
         </columns>
       </TableView>
-      <Button fx:id="btnGravar" layoutX="518.0" layoutY="345.0" mnemonicParsing="false" text="Gravar" />
+      <Button fx:id="btnGravar" layoutX="492.0" layoutY="358.0" mnemonicParsing="false" onAction="#handleButtonVoltar" prefHeight="25.0" prefWidth="76.0" text="Gravar" />
    </children>
 </AnchorPane>
